--- a/CSS/Processamento-DDA/processamentoDDA.css
+++ b/CSS/Processamento-DDA/processamentoDDA.css
@@ -21,7 +21,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-between;
         
         height: 6.938rem;
         width: 100vw;
@@ -56,8 +56,6 @@
         background-position: 2.063rem, .5rem;
     
         padding: 1rem 0 1rem 3.5rem;
-        margin-left: 3.724rem;
-        margin-right: 12.103rem;
     }
     .barra-pesquisa:focus{
         outline: 2px solid var(--primary-support);
