Finalizando responsivo de Configuração de Serviço

--- a/CSS/Configuração-Serviço/configuracaoServico.css
+++ b/CSS/Configuração-Serviço/configuracaoServico.css
@@ -717,7 +717,7 @@
     }
     .input__cobranca{
         height: 3.063rem;
-        width: 30.5vw;
+        width: 27.5rem;
         
         border: 1.02254px solid #ECECEC;
         border-radius: 8px;
