--- a/CSS/Configuração-Serviço/configuracaoServicoExtrato.css
+++ b/CSS/Configuração-Serviço/configuracaoServicoExtrato.css
@@ -89,7 +89,7 @@
     }
     .input__extrato{
         height: 3.063rem;
-        width: 30.5vw;
+        width: 27.5rem;
         
         border: 1.02254px solid #ECECEC;
         border-radius: 8px;
