Realizando alterações de Q.A

--- a/CSS/Home/home.css
+++ b/CSS/Home/home.css
@@ -233,7 +233,7 @@
         font-weight: 600;
         font-size: 12px;
 
-        padding: .5rem 1rem;
+        padding: .563rem 1rem .5rem 1rem;
 
         transition: all .2s ease-in-out;
     }
