--- a/CSS/base.css
+++ b/CSS/base.css
@@ -25,9 +25,17 @@ html{
 
 
 @keyframes animatetop {
-    from {top: -500px; opacity: 0}
+    from {top: -300px; opacity: 0}
     to {top: 0; opacity: 1}
 }
+@keyframes animatetopFeedback {
+    0% {top: -100px; opacity: 0; display: block;}
+
+    10%{top: 10%; opacity: 1;}
+
+    100% { top:10%; opacity: 0; display: none;}
+}
+
 @keyframes animateLeft {
     from {right: -70vw; opacity: 0}
     to {right: 0; opacity: 1}
@@ -98,3 +106,17 @@ html{
     visibility: visible;
     opacity: 1;
   }
+
+  input[type=date] { 
+    padding-left: 2.3rem;
+
+    background-image: url("../Assets/icone-input-date.svg");
+
+    background-repeat: no-repeat;
+    background-position-x: 1rem;
+    background-position-y: center;
+ }
+ input[type=date]:focus{
+    outline: 1px solid var(--primary-support);
+    text-overflow:ellipsis;
+ }
