--- a/CSS/EDI-Financeiro/edi-financeiro.css
+++ b/CSS/EDI-Financeiro/edi-financeiro.css
@@ -143,7 +143,7 @@
     }
 
     .card__movimentacao{
-        width: 26.688rem;
+        width: 30vw;
         font-family: var(--mont-serrat);
         border: 0.034rem solid #F9F9F9;
         box-shadow: 0px 0.136rem 0.674rem rgba(122, 133, 148, 0.21);
