Finalizando javascript do filtro em Processamento de Retorno

--- a/CSS/ProcessamentoRetorno/processamentoRetorno.css
+++ b/CSS/ProcessamentoRetorno/processamentoRetorno.css
@@ -412,7 +412,7 @@
 
         width: 93vw;
 
-        display: flex;
+        display: none;
         flex-direction: column;
 
         position: relative;
