--- a/CSS/Processamento-DDA/processamentoDDA.css
+++ b/CSS/Processamento-DDA/processamentoDDA.css
@@ -374,6 +374,9 @@
         border: 1px solid #F1F1F1;
 
         padding: 2rem 2rem 2.5rem 2rem;
+        margin-left: 3rem;
+        
+        margin-right: 3.438rem;
         margin-bottom: 5.5rem;
 
         animation-name: animatetop;
